tests/NormalTests/paczka2/big_fuzzy/28467572.err
Error in line 2: A368 S473 20,3
Error in line 8: aW3g93ftsK S692 350,4
Error in line 4: A368 S322 45,6
Error in line 12: aW3g93ftsK A368 54,9
Error in line 24: A368 S473 92,3
Error in line 29: IkvzvnkMv S692 68,9
Error in line 20: aW3g93ftsK S322 9,5
Error in line 15: pLH3m S322 63,1
Error in line 40: aW3g93ftsK S692 22,03
Error in line 26: EZu S473 78,1
Error in line 44: IkvzvnkMv A368 79,4
Error in line 48: EZu A368 39,2
Error in line 52: EZu S322 57,3
Error in line 55: Fg1 S473 142,28
Error in line 37: aW3g93ftsK A368 43,7
Error in line 72: pLH3m A368 19,3
Error in line 85: EZu S473 70,4
Error in line 88: EZu A368 375,8
Error in line 96: Fg1 A368 -3,9
Error in line 89: pLH3m S322 14,0
Error in line 104: aW3g93ftsK S322 15,5
Error in line 95: Fg1 A368 69,2
Error in line 118: JQxd8c2kc A368 77,16
Error in line 126: Fg1 S322 163,6
Error in line 128: IkvzvnkMv S322 9,3
Error in line 132: IkvzvnkMv S473 80,0
Error in line 135: IkvzvnkMv A368 24,2
Error in line 130: Fg1 S473 28,8
Error in line 139: JQxd8c2kc S473 29,9
Error in line 143: JQxd8c2kc S322 3,7
Error in line 144: EZu S322 0,6
Error in line 145: JQxd8c2kc A368 48,7
Error in line 148: JQxd8c2kc S|22 2|1,2
Error in line 146: EZu A368 77,5
Error in line 150: EZu S473 16,8
Error in line 154: IkvzvnkMv S473 100,1
Error in line 147: JQxd8c2kc S322 51,5
Error in line 169: EZu S322 13,4
Error in line 174: JQxd8c2kc A368 97,4
Error in line 180: JQxd8c2kc S692 -1,5
Error in line 179: JQxd8c2kc S692 12,4
Error in line 195: IkvzvnkMv S692 13,9
Error in line 213: Fg1 S692 35,0
Error in line 226: aW3g93ftsK A368 61,`
Error in line 218: EZu A368 17,1
Error in line 230: aW3g93ftsK A368 230,6
Error in line 236: Fg1 A368 11,6
Error in line 239: JQxd8c2kc S473 98,5
Error in line 245: Fg1 S692 645
Error in line 241: JQxd8c2kc S322 8,1
